# Nscattering

./: .gitignore  123.root  Analyse.cpp  CMakeLists.txt  EvsCross.txt  FindCurrent.cpp  Kinematic factor calculator.ipynb  Peak analyse.ipynb  Thickness.cpp  Thickness.ipynb  Vinkelhistogrammer.cpp  cross.txt  peakpositioner.txt  rates.txt  run.cpp  summedhistograms.root
include/: Hit.h  ParticleType.h  projectutil.h  runner.h  runner2.h
peaks/: 2001.txt  2500.txt  3000.txt
setup/: Det1.cal  Det2.cal  SU.cal  setup.json  target.json
